# lab

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  t.py
algo/: heap.py  manacher.py  math.py  max_window.py  monotonic_stack.py  prime.py  pyproject.toml  reverse_stack.py
algo/copypasta/: common.py  dp.py  fenwick_tree.py  graph.py  graph_tree.py  math.py  monotone_queue.py  segment_tree.py  sort.py  union_find.py
algo/data_structure/dsu/: dsu.py
algo/data_structure/linkedlist/: __init__.py  reverse.py
algo/data_structure/tree/: segment_tree.cpp  segment_tree.py
algo/data_structure/tree/fenwick_tree/: fenwick_tree.py
algo/dp/: fib.py
algo/ds/: monotone_queue.py  monotone_stack.py
algo/ds/dsu/: dsu.cpp  dsu.py
algo/ds/heap/: heap.cpp  heap.py
algo/ds/linkedlist/: linkedlist.cpp  reverse.py
algo/ds/tree/: segment_tree.py
algo/ds/tree/fenwick_tree/: fenwick_tree.py
algo/ds/trie/: trie.cpp  trie.py
algo/graph/: graph.cpp  graph.py
algo/leetcode/: 135_candy.py  1663_smallest_string_with_a_given_numeric_value.py  46_permutations.py  47_permutations_II.py  517_super_washing_machines.py  881_boats_to_save_people.py  manacher.py  tool.py
algo/leetcode/algo/00022/: sl.py
algo/leetcode/algo/00024/: sl.py
algo/leetcode/algo/00031/: sl.py
algo/leetcode/algo/00034/: sl.py
algo/leetcode/algo/00039/: sl.py
algo/leetcode/algo/00046/: sl.py
algo/leetcode/algo/00053/: sl.py
algo/leetcode/algo/00055/: sl.py
algo/leetcode/algo/00061/: sl.py
algo/leetcode/templates/: tmpl.py
algo/oj/leetcode/: 416_partition_equal_subset_sum.py  486_predict_the_winner.py  958_check_completeness_of_a_binary_tree.py  98_validate_binary_search_tree.py  leetgo.yaml  tool.py
algo/oj/luogu/: b3614.py
algo/search/: binary_search.cpp  binary_search.py  search.py
algo/sort/: merge_sort.cpp  merge_sort.py  quick_sort.cpp  quick_sort.py
algo/tree/: __init__.py  builder.py  log.py  tranverse.py  traverse.py
pl/py/: .pre-commit-config.yaml  CountDownLatch.py  async.py  cache.py  decoder.py  descriptor.py  fn.py  log.py  pyproject.toml  test_class.py  test_dataclass.py  test_pydantic.py  test_t.py  test_typing.py  timer.py  tmodule.py
pl/py/log/: log_thread.py
pl/py/tests/: decorator.py  t_cf.py  t_prometheus.py
pl/py/timer/: scheduler.py  timer.py
system/btree/: pyproject.toml
system/btree/tests/: test.py
(+1972 files in other folders)
