[project]
name = "algo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "shiyang07ca", email = "shiyang07ca@gmail.com"},
]
dependencies = [
    "sortedcontainers==2.4.0",
    "leetgo-py==0.2.4",
    "ruff>=0.8.6",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.ruff]
lint.select = [
    "E",   # pycodestyle - Error
    "F",   # Pyflakes
    "W",   # pycodestyle - Warning
    "I",   # isort
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "C90", # mccabe
    "RUF", # ruff
]
fix = true
lint.ignore = [
    "E501", # 忽略行太长的错误
    "RUF003",
    "F403",
    "F405",
]
line-length = 88 # 设置最大行长度
lint.ignore-init-module-imports = true

