[project]
name = "py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "shiyang07ca", email = "shiyang07ca@gmail.com" }]
dependencies = [
    "opentelemetry-sdk>=1.27.0",
    "jupyter>=1.1.1",
    "prometheus-client>=0.21.0",
    "numpy>=2.1.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "UNLICENSED" }


[tool.pdm]
distribution = false
