[project]
name = "btree"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "shiyang07ca", email = "shiyang07ca@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.ruff]
lint.ignore = [
    "E501", # 忽略行太长的错误
    "S101", # 忽略断言的错误
]

lint.select = [
    "E",   # pycodestyle - Error
    "F",   # Pyflakes
    "W",   # pycodestyle - Warning
    "I",   # isort
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "C90", # mccabe
    "RUF", # ruff
]
fix = true

