[project]
name = "leeetgo-python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "shiyang07ca", email = "shiyang07ca@gmail.com"},
]
dependencies = [
    "sortedcontainers>=2.4.0",
    "leetgo-py>=0.2.4",
]
requires-python = ">=3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
